--- a/reservas-onlines-main/static/style.css
+++ b/reservas-onlines-main/static/style.css
@@ -1,9 +1,13 @@
-/* Reset básico */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+/* :root{
+  --papel-de-parede: #fdf6f0;
+  --
+} */
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,21 +18,20 @@ body {
   flex-direction: column;
 }
 
-/* Container centralizado */
 .container {
   max-width: 600px;
   margin: 3rem auto;
   padding: 2rem;
 }
 
-/* Cabeçalhos */
+/* ----------------------------------------------------- Cabeçalho */
 h2 {
   text-align: center;
   margin-bottom: 2rem;
   color: #8B5E3C;
 }
 
-/* Formulário */
+/* ----------------------------------------------------- Formulário*/
 form {
   background: #fff;
   padding: 2rem;
@@ -36,10 +39,8 @@ form {
   box-shadow: 0 6px 18px rgba(91, 61, 39, 0.15);
 }
 
-/* Inputs, selects, botões */
-form input,
-form select,
-form button {
+
+form input,form select,form button {
   width: 100%;
   padding: 0.9rem;
   margin: 0.6rem 0 1.2rem;
@@ -50,14 +51,13 @@ form button {
   color: #5C3A21;
 }
 
-form input:focus,
-form select:focus {
+form input:focus,form select:focus {
   outline: none;
   border-color: #8B5E3C;
   box-shadow: 0 0 6px rgba(139, 94, 60, 0.4);
 }
 
-/* Labels */
+
 form label {
   font-weight: bold;
   display: block;
@@ -65,9 +65,8 @@ form label {
   color: #5C3A21;
 }
 
-/* Botões */
-form button,
-.btn {
+
+form button,.btn {
   background-color: #8B5E3C;
   color: #fff;
   font-weight: bold;
@@ -76,21 +75,20 @@ form button,
   transition: background-color 0.3s;
 }
 
-form button:hover,
-.btn:hover {
+form button:hover,.btn:hover {
   background-color: #5C3A21;
 }
 
-.btn-secondary {
+.btn-2 {
   background-color: #D6A77A;
   color: #fff;
 }
 
-.btn-secondary:hover {
+.btn-2:hover {
   background-color: #B47A4B;
 }
 
-/* Mensagens */
+/* --------------------------------------------------- Mensagens */
 .erro-msg {
   color: #b00020;
   font-weight: bold;
@@ -105,7 +103,7 @@ form button:hover,
   margin-bottom: 1rem;
 }
 
-/* Lista de reservas */
+/* ------------------------------------------------ Lista das reservas */
 ul {
   list-style: none;
   padding: 0;
@@ -121,7 +119,7 @@ ul li {
   line-height: 1.5;
 }
 
-/* Links */
+
 a {
   text-decoration: none;
   color: #8B5E3C;
@@ -131,7 +129,7 @@ a:hover {
   text-decoration: underline;
 }
 
-/* Espaçamento */
+/* --------------------------------------------- Alinhamento */
 .text-center {
   text-align: center;
 }
@@ -148,7 +146,7 @@ a:hover {
   margin-top: 3rem;
 }
 
-/* Responsividade */
+/* ---------------------------------------------- Layout Responsivo*/
 @media (max-width: 600px) {
   .container {
     margin: 1rem;
