--- a/Sistema_de_Reservas/static/css/index.css
+++ b/Sistema_de_Reservas/static/css/index.css
@@ -77,7 +77,7 @@ body {
 
 .welcome-description {
   font-size: 1.2rem;
-  color: rgba(255,255,255,0.95);
+  color:  rgba(75, 60, 48, 0.95);
   margin-top: 20px;
   line-height: 1.6;
   max-width: 600px;
